# MulliganMachine

./: .gitignore  README.md  environment.yml  pyproject.toml
scripts/: build_card_features.py  evaluate.py  generate.py  generate_sample_decks.py  inspect_card_features.py  inspect_edhrec.py  inspect_mtggoldfish.py  inspect_mtggoldfish2.py  inspect_mtggoldfish3.py  inspect_mtggoldfish4.py  preprocess.py  scrape_archidekt.py  scrape_edhrec.py  scrape_moxfield.py  scrape_mtggoldfish.py  scrape_scryfall.py  test_archidekt.py  test_moxfield.py  test_mtggoldfish.py  test_sanity.py  train.py  visualize_embeddings.py
src/mulligan_machine/: __init__.py
src/mulligan_machine/data/: card_features.py  dataset.py  scryfall.py  tokenizer.py
src/mulligan_machine/evaluation/: metrics.py
src/mulligan_machine/inference/: generator.py
src/mulligan_machine/model/: config.py  transformer.py
src/mulligan_machine/scraping/: archidekt.py  edhrec.py  moxfield.py  mtggoldfish.py
src/mulligan_machine/training/: trainer.py
